# GrainWise

./: .env.development  .gitignore  .tool-versions  .tool-versions.web  Dockerfile  Gemfile  compose.yml  env  ml-services.Dockerfile  package-lock.json  package.json  pyproject.toml  requirements.txt  start.bat
app/components/: figure_view_component.html.erb  figure_view_component.rb  grave_bounding_box_chart_component.html.erb  grave_bounding_box_chart_component.rb  grave_outlines_component.html.erb  grave_outlines_component.rb  lithic_contours_component.html.erb  lithic_contours_component.rb  lithic_outlines_component.html.erb  lithic_outlines_component.rb  map_view_component.html.erb  map_view_component.rb
app/controllers/: anthropologies_controller.rb  application_controller.rb  authorized_controller.rb  figures_controller.rb  genetics_controller.rb  grains_controller.rb  images_controller.rb  maps_controller.rb  page_images_controller.rb  pages_controller.rb  sites_controller.rb  strains_controller.rb  tags_controller.rb  update_grave_controller.rb  uploads_controller.rb  user_sessions_controller.rb  users_controller.rb
app/helpers/: anthropologies_helper.rb  c14_dates_helper.rb  figures_helper.rb  graves_helper.rb  kurgans_helper.rb  lithics_helper.rb  mt_haplogroups_helper.rb  publications_helper.rb  stable_isotopes_helper.rb  update_grave_helper.rb  y_haplogroups_helper.rb
app/javascript/: application.css  application.js  message-bus.js
app/jobs/: analyze_publication_job.rb
app/lib/: analyze_image.rb  analyze_publication.rb  analyze_scales.rb  artefacts_heatmap.rb  assign_grain_scales.rb  bezier.rb  build_text.rb  contour_tools.rb  create_graves.rb  create_lithics.rb  create_summary.rb  dating_parser.rb  distance.rb  efd.rb  figure_map_converter.rb  grave_angles.rb  grave_size.rb  lithic_contours.rb  lithic_stats.rb  pca.rb  skeleton_angles.rb  skeleton_position.rb  stats.rb  table_builder.rb  unit_accessor.rb  upgma.rb
app/mailers/: application_mailer.rb  login_mailer.rb
app/models/: arrow.rb  figure.rb  grain.rb  grain_figure.rb  image.rb  point.rb  scale.rb  site.rb  strain.rb  tag.rb  taxonomy.rb  text.rb  text_item.rb  upload.rb  upload_item.rb  user.rb
config/: application.rb  cable.yml  database.yml  deploy.rb  detector.yml  importmap.rb  puma.rb  routes.rb  secrets.yml
config/environments/: development.rb  production.rb
config/initializers/: assets.rb  inflections.rb  message_bus.rb  pagy.rb  (+2 more)
db/: Dockerfile  dump_schema.sh  grain.sql  schema.rb
scripts/: arrow_model.py  dfg_dataset.py  export_oonx.py  loss.py  ml.py  test_skeleton_classifier.py  test_torch.py  test_unet.py  torch_service.py  train.bat  train_arrow_angle_network.py  train_keypoint.py  train_masks.py  train_msam.py  train_object_detection.py  train_skeleton_classifier.py  train_skeleton_orientation.py
(+356 files in other folders)
